--- a/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
+++ b/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
@@ -125,6 +125,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -159,6 +160,7 @@
     <Compile Include="Licensing\LicenseVerifierFactoryTest.cs" />
     <Compile Include="Licensing\LicenseVerifierTest.cs" />
     <Compile Include="NHibernateConfiguration\AuditSetterTest.cs" />
+    <Compile Include="NHibernateConfiguration\TeleoptiDistributedTransactionContextTest.cs" />
     <Compile Include="NHibernateConfiguration\EnversAuditDelegateTest.cs" />
     <Compile Include="NHibernateConfiguration\EnversConfigurationDelegateTest.cs" />
     <Compile Include="NHibernateConfiguration\SqlServerProgrammabilityAuxiliaryTest.cs" />
@@ -183,6 +185,7 @@
     <Compile Include="Foundation\StateTest.cs" />
     <Compile Include="NHibernateConfiguration\SqlServerExceptionConverterTest.cs" />
     <Compile Include="NHibernateConfiguration\TeleoptiDatabaseNamingStrategyTest.cs" />
+    <Compile Include="NHibernateConfiguration\TeleoptiDistributedTransactionFactoryTest.cs" />
     <Compile Include="NHibernateConfiguration\TeleoptiDriverConnectionProviderTest.cs" />
     <Compile Include="NHibernateConfiguration\TrackerByteTest.cs" />
     <Compile Include="Foundation\WriteStringToFileTest.cs" />
