--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.Interfaces/Teleopti.Analytics.Etl.Interfaces.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.Interfaces/Teleopti.Analytics.Etl.Interfaces.csproj
@@ -99,10 +99,10 @@
     <Compile Include="PerformanceManager\ResultDto.cs" />
     <Compile Include="PerformanceManager\UserDto.cs" />
     <Compile Include="Common\IEtlJobRelativePeriod.cs" />
-    <Compile Include="Common\IEtlLog.cs" />
-    <Compile Include="Common\IEtlLogCollection.cs" />
-    <Compile Include="Common\IEtlSchedule.cs" />
-    <Compile Include="Common\IEtlScheduleCollection.cs" />
+    <Compile Include="Common\IEtlJobLog.cs" />
+    <Compile Include="Common\IEtlJobLogCollection.cs" />
+    <Compile Include="Common\IEtlJobSchedule.cs" />
+    <Compile Include="Common\IEtlJobScheduleCollection.cs" />
     <Compile Include="Common\ILogRepository.cs" />
     <Compile Include="Common\IScheduleRepository.cs" />
     <Compile Include="Common\JobScheduleType.cs" />
