--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.ConfigTool/Teleopti.Analytics.Etl.ConfigTool.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.ConfigTool/Teleopti.Analytics.Etl.ConfigTool.csproj
@@ -114,54 +114,54 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DataSourceConfiguration\DataSourceConfigurationView.cs">
+    <Compile Include="Gui\DataSourceConfiguration\DataSourceConfigurationView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DataSourceConfiguration\DataSourceConfigurationView.Designer.cs">
+    <Compile Include="Gui\DataSourceConfiguration\DataSourceConfigurationView.Designer.cs">
       <DependentUpon>DataSourceConfigurationView.cs</DependentUpon>
     </Compile>
-    <Compile Include="EtlJobSchedule\SpinningProgress\SpinningProgressControl.cs">
+    <Compile Include="Gui\SpinningProgress\SpinningProgressControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="EtlJobSchedule\SpinningProgress\SpinningProgressControl.Designer.cs">
+    <Compile Include="Gui\SpinningProgress\SpinningProgressControl.Designer.cs">
       <DependentUpon>SpinningProgressControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="EtlJobSchedule\SpinningProgress\ToolStripSpinningProgressControl.cs" />
-    <Compile Include="EtlJobSchedule\ViewModel\IJobHistory.cs" />
-    <Compile Include="EtlJobSchedule\ViewModel\JobHistoryMapper.cs" />
-    <Compile Include="EtlJobSchedule\ViewModel\JobHistorySelectionEventArgs.cs" />
-    <Compile Include="EtlJobSchedule\ViewModel\JobHistorySelectionViewModel.cs" />
-    <Compile Include="EtlJobSchedule\ViewModel\JobHistoryViewModel.cs" />
-    <Compile Include="EtlJobSchedule\ViewModel\JobStepHistoryViewModel.cs" />
-    <Compile Include="EtlJobSchedule\View\JobHistoryMain.xaml.cs">
+    <Compile Include="Gui\SpinningProgress\ToolStripSpinningProgressControl.cs" />
+    <Compile Include="Gui\ViewModel\IJobHistory.cs" />
+    <Compile Include="Gui\ViewModel\JobHistoryMapper.cs" />
+    <Compile Include="Gui\ViewModel\JobHistorySelectionEventArgs.cs" />
+    <Compile Include="Gui\ViewModel\JobHistorySelectionViewModel.cs" />
+    <Compile Include="Gui\ViewModel\JobHistoryViewModel.cs" />
+    <Compile Include="Gui\ViewModel\JobStepHistoryViewModel.cs" />
+    <Compile Include="Gui\View\JobHistoryMain.xaml.cs">
       <DependentUpon>JobHistoryMain.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EtlJobSchedule\View\JobHistorySelection.xaml.cs">
+    <Compile Include="Gui\View\JobHistorySelection.xaml.cs">
       <DependentUpon>JobHistorySelection.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EtlJobSchedule\View\JobHistoryView.xaml.cs">
+    <Compile Include="Gui\View\JobHistoryView.xaml.cs">
       <DependentUpon>JobHistoryView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="StartupConfiguration\StartupConfigurationView.cs">
+    <Compile Include="Gui\StartupConfiguration\StartupConfigurationView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="StartupConfiguration\StartupConfigurationView.Designer.cs">
+    <Compile Include="Gui\StartupConfiguration\StartupConfigurationView.Designer.cs">
       <DependentUpon>StartupConfigurationView.cs</DependentUpon>
     </Compile>
     <Compile Include="Transformer\DataSourceInvalidCollection.cs" />
-    <Compile Include="EtlJobSchedule\Control\ManualControl.xaml.cs">
+    <Compile Include="Gui\Control\ManualControl.xaml.cs">
       <DependentUpon>ManualControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EtlJobSchedule\Control\ManualEtlTree.xaml.cs">
+    <Compile Include="Gui\Control\ManualEtlTree.xaml.cs">
       <DependentUpon>ManualEtlTree.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EtlJobSchedule\Control\ManualEtl.xaml.cs">
+    <Compile Include="Gui\Control\ManualEtl.xaml.cs">
       <DependentUpon>ManualEtl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EtlJobSchedule\JobSchedule.cs">
+    <Compile Include="Gui\JobSchedule.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EtlJobSchedule\JobSchedule.Designer.cs">
+    <Compile Include="Gui\JobSchedule.Designer.cs">
       <DependentUpon>JobSchedule.cs</DependentUpon>
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
@@ -169,11 +169,11 @@
     <Compile Include="Transformer\DataSourceValidCollection.cs" />
     <Compile Include="Transformer\JobCollectionFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="EtlJobSchedule\JobSchedule.resx">
+    <EmbeddedResource Include="Gui\JobSchedule.resx">
       <DependentUpon>JobSchedule.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="EtlJobSchedule\SpinningProgress\SpinningProgressControl.resx">
+    <EmbeddedResource Include="Gui\SpinningProgress\SpinningProgressControl.resx">
       <DependentUpon>SpinningProgressControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -181,7 +181,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="DataSourceConfiguration\DataSourceConfigurationView.resx">
+    <EmbeddedResource Include="Gui\DataSourceConfiguration\DataSourceConfigurationView.resx">
       <DependentUpon>DataSourceConfigurationView.cs</DependentUpon>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
@@ -189,7 +189,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="StartupConfiguration\StartupConfigurationView.resx">
+    <EmbeddedResource Include="Gui\StartupConfiguration\StartupConfigurationView.resx">
       <DependentUpon>StartupConfigurationView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="..\..\Teleopti.Ccc.snk">
@@ -206,7 +206,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="EtlJobSchedule\Control\ScheduleControl.xaml.cs">
+    <Compile Include="Gui\Control\ScheduleControl.xaml.cs">
       <DependentUpon>ScheduleControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
@@ -270,39 +270,39 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="EtlJobSchedule\Control\ManualControl.xaml">
+    <Page Include="Gui\Control\ManualControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="EtlJobSchedule\Control\ManualEtlTree.xaml">
+    <Page Include="Gui\Control\ManualEtlTree.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="EtlJobSchedule\Control\ScheduleControl.xaml">
+    <Page Include="Gui\Control\ScheduleControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="EtlJobSchedule\Control\ManualEtl.xaml">
+    <Page Include="Gui\Control\ManualEtl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="EtlJobSchedule\View\JobHistoryMain.xaml">
+    <Page Include="Gui\View\JobHistoryMain.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="EtlJobSchedule\View\JobHistorySelection.xaml">
+    <Page Include="Gui\View\JobHistorySelection.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="EtlJobSchedule\View\JobHistoryView.xaml">
+    <Page Include="Gui\View\JobHistoryView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
