Added some classes

--- a/Teleopti.Ccc.WinCodeTest/Teleopti.Ccc.WinCodeTest.csproj
+++ b/Teleopti.Ccc.WinCodeTest/Teleopti.Ccc.WinCodeTest.csproj
@@ -498,6 +498,7 @@
     <Compile Include="Scheduler\AddOvertimeViewModelTest.cs" />
     <Compile Include="Scheduler\AddPersonalActivityViewModelTest.cs" />
     <Compile Include="Scheduler\AgentInfoHelperTest.cs" />
+    <Compile Include="Scheduler\AgentRestrictions\AgentRestrictionsDisplayDataExtractorTest.cs" />
     <Compile Include="Scheduler\AgentRestrictions\AgentRestrictionsDisplayRowTest.cs" />
     <Compile Include="Scheduler\AgentRestrictions\AgentRestrictionsModelTest.cs" />
     <Compile Include="Scheduler\AgentRestrictions\AgentRestrictionsPresenterTest.cs" />
