--- a/Teleopti.Ccc.Sdk/TeleoptiControls/TeleoptiControls.csproj
+++ b/Teleopti.Ccc.Sdk/TeleoptiControls/TeleoptiControls.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>TeleoptiControls</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>TeleoptiControlsKey.snk</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
