--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.Interfaces/Teleopti.Analytics.Etl.Interfaces.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.Interfaces/Teleopti.Analytics.Etl.Interfaces.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\AlarmEventArgs.cs" />
+    <Compile Include="Common\IJobHistoryRepository.cs" />
     <Compile Include="Common\IConfigurationHandler.cs" />
     <Compile Include="Common\IEtlJobLock.cs" />
     <Compile Include="Common\IEtlRunningInformation.cs" />
