Remove local nhib from ETLService
--HG--
branch : Release 7.2.362

--- a/BuildArtifacts/AppETLService.config
+++ b/BuildArtifacts/AppETLService.config
@@ -18,6 +18,7 @@
     <add key="MessageBroker" value="Data Source=.;Integrated Security=True;Initial Catalog=$(AnalyticsDB)"/>
     <!--WISEMETA: value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=[AS_SERVER_NAME];Initial Catalog=[AS_DATABASE];Client Cache Size=25;Auto Synch Period=10000"-->
     <add key="Cube" value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=$(AnalyticsDB);Client Cache Size=25;Auto Synch Period=10000"/>
+	<add key="nhibConfPath" value="" />
   </appSettings>
   
 	<log4net>
