--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.ServiceHost/Teleopti.Analytics.Etl.ServiceHost.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.ServiceHost/Teleopti.Analytics.Etl.ServiceHost.csproj
@@ -121,9 +121,6 @@
     <CodeAnalysisDictionary Include="..\..\CodeAnalysisDictionary.xml">
       <Link>CodeAnalysisDictionary.xml</Link>
     </CodeAnalysisDictionary>
-    <Content Include="test.nhib.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -160,4 +157,7 @@
     <PostBuildEvent>xcopy "$(ProjectDir)..\..\nhibernateAddons\Cache_Providers\*.dll" "$(TargetDir)" /y</PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>if not exist "$(ProjectDir)App.config" copy "$(ProjectDir)..\..\BuildArtifacts\AppETLService.config" "$(ProjectDir)App.config"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
