--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Core\RequestContext\CurrentPrincipalProviderTest.cs" />
     <Compile Include="Core\RequestContext\SessionSpecificDataStringSerializerTest.cs" />
     <Compile Include="Core\Requests\DataProvider\AbsenceRequestPersisterTest.cs" />
+    <Compile Include="Core\Requests\Mapping\AbsenceRequestFormMappingTest.cs" />
     <Compile Include="Core\Settings\Mapping\SettingsViewModelMappingTest.cs" />
     <Compile Include="Core\TeamSchedule\Mapping\TeamScheduleDomainDataMappingTest.cs" />
     <Compile Include="Core\TeamSchedule\Mapping\TeamScheduleViewModelMappingTest.cs" />
