--- a/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
+++ b/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
@@ -154,6 +154,7 @@
     <Compile Include="NHibernateConfiguration\HybridWebSessionContext.cs" />
     <Compile Include="NHibernateConfiguration\IDataSourceConfigurationSetter.cs" />
     <Compile Include="NHibernateConfiguration\IEnversConfiguration.cs" />
+    <Compile Include="NHibernateConfiguration\NHibernateConfigurationExtensions.cs" />
     <Compile Include="NHibernateConfiguration\SqlServerProgrammabilityAuxiliary.cs" />
     <Compile Include="NHibernateConfiguration\ColorNumber.cs" />
     <Compile Include="Foundation\ConstraintViolationException.cs" />
