--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Web.config
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Web.config
@@ -8,9 +8,9 @@
   </configSections>
   <connectionStrings>
     <clear />
-    <add name="LocalSqlServer" connectionString="Persist Security Info=False;Data Source=.;User Id=sa;Password=rogermoore;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics" />
-    <add name="Database" connectionString="Persist Security Info=False;Data Source=.;User Id=sa;Password=rogermoore;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics;Application Name=Teleopti.CCC.Analytics.WebPortal" />
-    <add name="Cube" connectionString="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=HgMain_Demoreg_TeleoptiAnalytics;Client Cache Size=25;Auto Synch Period=10000" />
+    <add name="LocalSqlServer" connectionString="Persist Security Info=False;Data Source=.;User Id=sa;Password=cadadi;Initial Catalog=Main_Demoreg_TeleoptiAnalytics" />
+    <add name="Database" connectionString="Persist Security Info=False;Data Source=.;User Id=sa;Password=cadadi;Initial Catalog=Main_Demoreg_TeleoptiAnalytics;Application Name=Teleopti.CCC.Analytics.WebPortal" />
+    <add name="Cube" connectionString="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=Main_Demoreg_TeleoptiAnalytics;Client Cache Size=25;Auto Synch Period=10000" />
   </connectionStrings>
   <system.web>
     <membership userIsOnlineTimeWindow="60">
