Updated artifact for new broker.
--HG--
branch : Release 7.2.362

--- a/BuildArtifacts/BrokerWeb.config
+++ b/BuildArtifacts/BrokerWeb.config
@@ -3,7 +3,7 @@
   <appSettings />
   <connectionStrings />
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="false" targetFramework="4.0" />
     <!--
       The <authentication> section enables configuration 
       of the security authentication mode used by 
@@ -23,6 +23,10 @@
        </customErrors>
     -->
   </system.web>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
