Principal claim no CAN but also CAN NOT hold application function entity. And it seems to work.

--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -790,6 +790,7 @@
     <Compile Include="Security\PasswordStrengthRule.cs" />
     <Compile Include="Security\Matrix\MatrixPermissionsResolver.cs" />
     <Compile Include="Security\Matrix\TeamResolver.cs" />
+    <Compile Include="Security\Principal\AuthorizeApplicationFunction.cs" />
     <Compile Include="Security\Principal\AuthorizeEveryone.cs" />
     <Compile Include="Security\Principal\AuthorizeExternalAvailableData.cs" />
     <Compile Include="Security\Principal\AuthorizeMyBusinessUnit.cs" />
