Refactored away principal creation from principal manager into a seperate factory to be able to inject how and what we create...

--- a/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
+++ b/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
@@ -120,6 +120,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Foundation\PrincipalFactory.cs" />
     <Compile Include="Foundation\PurgeApplicationData.cs" />
     <Compile Include="Licensing\Agreements\AgreementProvider.cs" />
     <Compile Include="Licensing\Agreements\LicenseAgreement.cs" />
