--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
@@ -381,8 +381,8 @@
     <Compile Include="Core\RequestContext\ISetThreadCulture.cs" />
     <Compile Include="Core\RequestContext\ISessionSpecificCookieDataProviderSettings.cs" />
     <Compile Include="Core\RequestContext\IRequestContextInitializer.cs" />
-    <Compile Include="Core\RequestContext\IPrincipalFactory.cs" />
-    <Compile Include="Core\RequestContext\PrincipalFactory.cs" />
+    <Compile Include="Core\RequestContext\ISessionPrincipalFactory.cs" />
+    <Compile Include="Core\RequestContext\SessionPrincipalFactory.cs" />
     <Compile Include="Core\RequestContext\RequestContextInitializer.cs" />
     <Compile Include="Core\RequestContext\SessionSpecificCookieDataProvider.cs" />
     <Compile Include="Areas\MyTime\Core\DateOnlyModelBinder.cs" />
