--- a/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
+++ b/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
@@ -145,7 +145,7 @@
     <Compile Include="Foundation\ExplicitlySetGenericPrincipalDataSourceException.cs" />
     <Compile Include="Foundation\ForeignKeyExceptionTest.cs" />
     <Compile Include="Foundation\RoleToPrincipalCommandTest.cs" />
-    <Compile Include="Foundation\PrincipalManagerTest.cs">
+    <Compile Include="Foundation\WindowsAppDomainPrincipalContextTest.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Foundation\SystemUserPasswordSpecificationTest.cs" />
