--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
@@ -184,8 +184,11 @@
     <Compile Include="Core\Aop\Core\IResolvedAspect.cs" />
     <Compile Include="Core\Aop\Core\IResolvedAspectAttribute.cs" />
     <Compile Include="Core\Aop\Core\ResolvedAspectAttribute.cs" />
+    <Compile Include="Core\RequestContext\CurrentHttpContext.cs" />
+    <Compile Include="Core\RequestContext\ICurrentHttpContext.cs" />
     <Compile Include="Core\RequestContext\IdentityProvider.cs" />
     <Compile Include="Core\RequestContext\IIdentityProvider.cs" />
+    <Compile Include="Core\RequestContext\WebRequestPrincipalContext.cs" />
     <Compile Include="Filters\AsyncTaskAttribute.cs" />
     <Compile Include="Areas\MyTime\Controllers\PreferenceFeedbackController.cs" />
     <Compile Include="Areas\MyTime\Controllers\SettingsController.cs" />
