Added drawer for Not Available...

--- a/Win/Teleopti.Ccc.Win.csproj
+++ b/Win/Teleopti.Ccc.Win.csproj
@@ -1180,6 +1180,7 @@
       <DependentUpon>AgentRestrictionGrid.cs</DependentUpon>
     </Compile>
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsLoadingDrawer.cs" />
+    <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsNotAvailableDrawer.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsWarningDrawer.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionViewTEMP.cs">
       <SubType>Form</SubType>
