Missed a file last friday for some reason!

--- a/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
+++ b/Infrastructure/Teleopti.Ccc.Infrastructure.csproj
@@ -120,8 +120,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Foundation\IOrganisationMembershipFactory.cs" />
+    <Compile Include="Foundation\IRegionalFactory.cs" />
+    <Compile Include="Foundation\OrganisationMembershipFactory.cs" />
     <Compile Include="Foundation\PrincipalFactory.cs" />
     <Compile Include="Foundation\PurgeApplicationData.cs" />
+    <Compile Include="Foundation\RegionalFactory.cs" />
+    <Compile Include="Foundation\TeleoptiPrincipalFactory.cs" />
+    <Compile Include="Foundation\TeleoptiPrincipalSerializableFactory.cs" />
     <Compile Include="Licensing\Agreements\AgreementProvider.cs" />
     <Compile Include="Licensing\Agreements\LicenseAgreement.cs" />
     <Compile Include="Licensing\LicenseStatusRepositories.cs" />
