--- a/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
+++ b/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Licensing\LicenseVerifierFactoryTest.cs" />
     <Compile Include="Licensing\LicenseVerifierTest.cs" />
     <Compile Include="NHibernateConfiguration\AuditSetterTest.cs" />
+    <Compile Include="NHibernateConfiguration\Cache\ApplicationFunctionCollectionTest.cs" />
     <Compile Include="NHibernateConfiguration\Cache\PersonInApplicationRoleTest.cs" />
     <Compile Include="NHibernateConfiguration\DataSourceConfigurationSetterTest.cs" />
     <Compile Include="NHibernateConfiguration\EnversAuditDelegateTest.cs" />
