--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
@@ -125,6 +125,10 @@
         <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.3.0.4000" newVersion="3.3.0.4000" />
       </dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Rhino.Queues" publicKeyToken="0b3305902db7183f" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.4.2.0" newVersion="1.4.2.0" />
+			</dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
