"..\..\Logs\<someLogFile>.log"
--HG--
branch : Release 7.2.362

--- a/BuildArtifacts/AppETLTool.config
+++ b/BuildArtifacts/AppETLTool.config
@@ -23,7 +23,7 @@
 
 	<log4net>
 		<appender name="EventAppender" type="log4net.Appender.EventLogAppender" >
-			<applicationName value="TeleoptiETLTool" />
+			<applicationName value="..\..\Logs\ETLTool.log" />
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
 			</layout>
