--- a/BuildArtifacts/RTAWeb.config
+++ b/BuildArtifacts/RTAWeb.config
@@ -144,7 +144,7 @@
 	</system.serviceModel>
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="RtaWebService.log" />
+      <file value="..\..\Logs\RtaWebService.log" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="200KB" />
