--- a/BuildArtifacts/SDKWeb.config
+++ b/BuildArtifacts/SDKWeb.config
@@ -30,7 +30,7 @@
 
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="SdkWebService.log" />
+      <file value="..\..\Logs\SdkWebService.log" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="200KB" />
