--- a/BuildArtifacts/AnalyticsWeb.config
+++ b/BuildArtifacts/AnalyticsWeb.config
@@ -180,7 +180,7 @@
 			</layout>
 		</appender>
 		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-			<file value="AnalyticsWebPortal.log" />
+			<file value="..\..\Logs\AnalyticsWebPortal.log" />
 			<rollingStyle value="Size" />
 			<maxSizeRollBackups value="10" />
 			<maximumFileSize value="1000KB" />
