--- a/BuildArtifacts/AppETLService.config
+++ b/BuildArtifacts/AppETLService.config
@@ -23,7 +23,7 @@
   
 	<log4net>
 		<appender name="EventAppender" type="log4net.Appender.EventLogAppender" >
-			<applicationName value="TeleoptiETLService" />
+			<applicationName value="..\..\Logs\ETLService.log" />
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
 			</layout>
