--- a/BuildArtifacts/PMWeb.config
+++ b/BuildArtifacts/PMWeb.config
@@ -217,7 +217,7 @@
 			</layout>
 		</appender>
 		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-			<file value="AnalyticsWebPortal.log" />
+			<file value="..\..\Logs\PMService.log" />
 			<rollingStyle value="Size" />
 			<maxSizeRollBackups value="10" />
 			<maximumFileSize value="1000KB" />
