--- a/BuildArtifacts/ServiceBuslog4net.config
+++ b/BuildArtifacts/ServiceBuslog4net.config
@@ -15,7 +15,7 @@
  -->
     <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="TeleoptiServiceBus.log" />
+      <file value="..\..\Logs\TeleoptiServiceBus.log" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="200KB" />
