--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
@@ -117,7 +117,7 @@
     <Compile Include="Areas\MobileReports\TestData\DefinedReportProviderForTest.cs" />
     <Compile Include="Areas\MobileReports\TestData\DefinedReportsApplicationFunctionsFactory.cs" />
     <Compile Include="FakeCurrentHttpContext.cs" />
-    <Compile Include="FakePrincipalProvider.cs" />
+    <Compile Include="FakeCurrentTeleoptiPrincipal.cs" />
     <Compile Include="Areas\MobileReports\UserSettingServiceTest.cs" />
     <Compile Include="Areas\MyTime\Controllers\PreferenceFeedbackControllerTest.cs" />
     <Compile Include="Areas\MyTime\Core\TeamSchedule\DataProvider\TeamProviderTest.cs" />
@@ -145,7 +145,6 @@
     <Compile Include="Areas\MyTime\Core\Preference\Mapping\PreferenceDayFeedbackViewModelMappingTest.cs" />
     <Compile Include="Core\RequestContext\CultureProviderTest.cs" />
     <Compile Include="Core\RequestContext\DataSourceProviderTest.cs" />
-    <Compile Include="Core\RequestContext\PrincipalProviderTest.cs" />
     <Compile Include="Core\RequestContext\SessionSpecificDataStringSerializerTest.cs" />
     <Compile Include="Core\Settings\Mapping\SettingsViewModelMappingTest.cs" />
     <Compile Include="Core\TeamSchedule\Mapping\TeamScheduleDomainDataMappingTest.cs" />
