Add new Log4Net appender for ETL x 2
--HG--
branch : Release 7.2.362

--- a/BuildArtifacts/AppETLService.config
+++ b/BuildArtifacts/AppETLService.config
@@ -23,14 +23,26 @@
   
 	<log4net>
 		<appender name="EventAppender" type="log4net.Appender.EventLogAppender" >
-			<applicationName value="..\..\Logs\ETLService.log" />
+			<applicationName value="TeleoptiETLService" />
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+			</layout>
+		</appender>
+		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="..\..\..\Logs\ETL.Service.log" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="200KB" />
+			<staticLogFileName value="true" />
+			<appendToFile value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+			<param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" />
 			</layout>
 		</appender>
 		<root>
 			<level value="ERROR" />
 			<appender-ref ref="EventAppender" />
+			<appender-ref ref="RollingLogFileAppender" />
 		</root>
 		<logger name="Teleopti.Analytics.Etl.Transformer.Job.JobStepBase">
 			<level value="WARN" />
