--- a/BuildArtifacts/AppETLTool.config
+++ b/BuildArtifacts/AppETLTool.config
@@ -23,19 +23,30 @@
 
 	<log4net>
 		<appender name="EventAppender" type="log4net.Appender.EventLogAppender" >
-			<applicationName value="..\..\Logs\ETLTool.log" />
+			<applicationName value="TeleoptiETLTool" />
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+			</layout>
+		</appender>
+		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="..\..\..\Logs\ETL.Tool.log" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="200KB" />
+			<staticLogFileName value="true" />
+			<appendToFile value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+			<param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" />
 			</layout>
 		</appender>
 		<root>
 			<level value="ERROR" />
 			<appender-ref ref="EventAppender" />
+			<appender-ref ref="RollingLogFileAppender" />
 		</root>
 		<logger name="Teleopti.Analytics.Etl.Transformer.Job.JobStepBase">
 			<level value="WARN" />
 		</logger>
-
 	</log4net>
 
 	<system.serviceModel>
