--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
@@ -172,6 +172,8 @@
     <Compile Include="Areas\MobileReports\Models\Report\ReportResponseModel.cs" />
     <Compile Include="Areas\MobileReports\Models\Report\ReportTableRowViewModel.cs" />
     <Compile Include="Areas\MobileReports\Models\Domain\DefinedReportInformation.cs" />
+    <Compile Include="Areas\MyTime\Core\Settings\IPersonPersister.cs" />
+    <Compile Include="Areas\MyTime\Core\Settings\PersonPersister.cs" />
     <Compile Include="Core\Aop\Core\AspectAttribute.cs" />
     <Compile Include="Core\Aop\Core\AspectInterceptor.cs" />
     <Compile Include="Core\Aop\Core\AspectsAttribute.cs" />
